# openapi-typegen

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
src/: Args.zig  Cli.zig  Generator.zig  jsdoc_builder.rs  main.rs  main.zig  openapi.zig  target.zig  util.zig
src/jsdoc/: builder.rs  mod.rs
src/openapi/: parser.rs
