[package]
name = "openapi-to-jsdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
oas3 = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
