[package]
name = "openapi-to-jsdoc"
version = "0.1.3"
edition = "2021"
description = "Generate JSDoc typedefs from OpenAPI 3.0.x spec schemas"
license = "MIT"
repository = "https://github.com/kshyr/openapi-to-jsdoc"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
oas3 = "0.4.0"
openapiv3-extended = "6.0.0"
reqwest = { version = "0.12.1", features = ["json", "blocking"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
